--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Face Detector</title>
+    <title>Gaslight-GPT</title>
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
+<h1><b>So Lets See Your Stats!.. But Wait.. What..?!?!</b></h1>
     <div class="container">
       <video id="videoContainer" height="400" width="400" autoplay muted></video>
     </div>
