--- a/index.html
+++ b/index.html
@@ -5,9 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Gaslight-GPT</title>
     <link rel="stylesheet" href="css/styles.css" />
+<style>
+        h1 {
+            max-width: 80%;
+            font-size: 2rem;
+            color: #333;
+            background-color: #ffeb3b;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+        }
+    </style>
   </head>
   <body>
-<h1><b>So Lets See Your Stats!.. But Wait.. What..?!?!</b></h1>
+<h1>Want to check your age, mood, and get a compliment? You're at the right place! but wait..</h1>
     <div class="container">
       <video id="videoContainer" height="400" width="400" autoplay muted></video>
     </div>
@@ -15,7 +26,7 @@
       <div id="emotion">Emotion</div>
       <div id="gender">Gender</div>
       <div id="age">Age</div>
-      <div id="roast">Roast</div> <!-- 🔥 New roast box -->
+      <div id="roast">Compliment</div> <!-- 🔥 New roast box -->
     </div>
 
     <script src="./js/face-api.min.js"></script>
